chore: 텍스트 수정

--- a/adm/html/operation-popup-modify.html
+++ b/adm/html/operation-popup-modify.html
@@ -198,7 +198,7 @@
                 <p class="action-message">수정 사항을 등록하시겠습니까?</p>
                 <div class="btn-wrap flex-wrap-wrwp">
                     <a href="#!" class="krds-btn tertiary top medium" onclick="location.reload(); return false;">
-                        <span>다시작성</span>
+                        <span>원래대로</span>
                         <i class="svg-icon ico-reset medium"></i>
                     </a>
                     <a href="../html/member-supervisor-list.html" target="_self" class="krds-btn tertiary line medium">목록으로</a>
