feat(page):회원관리 페이지 추가

--- a/adm/html/member-supervisor-list.html
+++ b/adm/html/member-supervisor-list.html
@@ -168,7 +168,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" >승인</option>
                         <option value="rejected" selected>미승인</option>
                       </select>
@@ -176,8 +176,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-supervisor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -206,7 +206,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -214,8 +214,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-supervisor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -244,7 +244,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -252,8 +252,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-supervisor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -282,7 +282,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -290,8 +290,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-supervisor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -320,7 +320,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -328,8 +328,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-supervisor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
