--- a/adm/html/stats-school.html
+++ b/adm/html/stats-school.html
@@ -265,7 +265,7 @@
                                 </div>
                             </td>
                             <td>아산</td>
-                            <td>삼성샛별유치원</td>
+                            <td><b class="sch">삼성</b>샛별유치원</td>
                             <td>127</td>
                             <td>89</td>
                             <td>34</td>
@@ -301,7 +301,7 @@
                                 </div>
                             </td>
                             <td>서산</td>
-                            <td>삼성유치원</td>
+                            <td><b class="sch">삼성</b>유치원</td>
                             <td>65</td>
                             <td>31</td>
                             <td>8</td>
@@ -337,7 +337,7 @@
                                 </div>
                             </td>
                             <td>태안</td>
-                            <td>삼성초등학교</td>
+                            <td><b class="sch">삼성</b>초등학교</td>
                             <td>91</td>
                             <td>0</td>
                             <td>62</td>
@@ -373,7 +373,7 @@
                                 </div>
                             </td>
                             <td>태안</td>
-                            <td>삼성초등학교병설유치원</td>
+                            <td><b class="sch">삼성</b>초등학교병설유치원</td>
                             <td>48</td>
                             <td>113</td>
                             <td>67</td>
