--- a/adm/html/member-auditor-list.html
+++ b/adm/html/member-auditor-list.html
@@ -187,7 +187,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" >승인</option>
                         <option value="rejected" selected>미승인</option>
                       </select>
@@ -195,8 +195,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-auditor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -204,8 +204,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r2" />
+                        <label for="r2"><span class="sr-only">2행 선택</span></label>
                       </div>
                     </td>
                     <td>감사2팀</td>
@@ -219,7 +219,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -227,8 +227,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-auditor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -236,8 +236,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r3" />
+                        <label for="r3"><span class="sr-only">3행 선택</span></label>
                       </div>
                     </td>
                     <td>감사3팀</td>
@@ -251,7 +251,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -259,8 +259,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-auditor-edit.html" class="krds-btn small line"target="_self"  title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -268,8 +268,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r4" />
+                        <label for="r4"><span class="sr-only">4행 선택</span></label>
                       </div>
                     </td>
                     <td>감사4팀</td>
@@ -283,7 +283,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -291,8 +291,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-auditor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -300,8 +300,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r5" />
+                        <label for="r5"><span class="sr-only">1행 선택</span></label>
                       </div>
                     </td>
                     <td>감사5팀</td>
@@ -315,7 +315,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -323,8 +323,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-auditor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -332,7 +332,7 @@
               </table>
             </div>
 
-            <div class="page-btn-wrap ">
+            <div class="page-btn-wrap">
               <div class="btn-wrap">
                 <a href="javascript:void(0)" class="krds-btn small tertiary">선택수정</a>
                 <a href="javascript:void(0)" class="krds-btn small tertiary">선택삭제</a>
