--- a/adm/html/member-program-supervisor-list.html
+++ b/adm/html/member-program-supervisor-list.html
@@ -189,7 +189,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" >승인</option>
                         <option value="rejected" selected>미승인</option>
                       </select>
@@ -197,8 +197,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-program-supervisor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -206,8 +206,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r2" />
+                        <label for="r2"><span class="sr-only">2행 선택</span></label>
                       </div>
                     </td>
                     <td>아산</td>
@@ -228,7 +228,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -236,8 +236,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-program-supervisor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -245,8 +245,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r3" />
+                        <label for="r3"><span class="sr-only">3행 선택</span></label>
                       </div>
                     </td>
                     <td>아산</td>
@@ -267,7 +267,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -275,8 +275,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-program-supervisor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -284,8 +284,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r4" />
+                        <label for="r4"><span class="sr-only">4행 선택</span></label>
                       </div>
                     </td>
                     <td>아산</td>
@@ -306,7 +306,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -314,8 +314,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-program-supervisor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -323,8 +323,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r5" />
+                        <label for="r5"><span class="sr-only">5행 선택</span></label>
                       </div>
                     </td>
                     <td>아산</td>
@@ -345,7 +345,7 @@
                         </div>
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -353,8 +353,8 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                      <a href="../html/member-program-supervisor-edit.html" class="krds-btn small line" target="_self" title="수정">
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
