--- a/adm/html/member-teacher-list.html
+++ b/adm/html/member-teacher-list.html
@@ -231,7 +231,7 @@
                       <input type="text" class="krds-input small data-amount number-input" value="85">
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" >승인</option>
                         <option value="rejected" selected>미승인</option>
                       </select>
@@ -240,7 +240,7 @@
                     <td>2025-07-24</td>
                     <td>
                       <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -281,7 +281,7 @@
                       <input type="text" class="krds-input small data-amount number-input" value="85">
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" >승인</option>
                         <option value="rejected" selected>미승인</option>
                       </select>
@@ -290,7 +290,7 @@
                     <td>2025-07-24</td>
                     <td>
                       <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -331,7 +331,7 @@
                       <input type="text" class="krds-input small data-amount number-input" value="85">
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -340,7 +340,7 @@
                     <td>2025-07-24</td>
                     <td>
                       <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -381,7 +381,7 @@
                       <input type="text" class="krds-input small data-amount number-input" value="85">
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -390,7 +390,7 @@
                     <td>2025-07-24</td>
                     <td>
                       <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -431,7 +431,7 @@
                       <input type="text" class="krds-input small data-amount number-input" value="85">
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -440,7 +440,7 @@
                     <td>2025-07-24</td>
                     <td>
                       <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -481,7 +481,7 @@
                       <input type="text" class="krds-input small data-amount number-input" value="85">
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -490,7 +490,7 @@
                     <td>2025-07-24</td>
                     <td>
                       <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
@@ -531,7 +531,7 @@
                       <input type="text" class="krds-input small data-amount number-input" value="85">
                     </td>
                     <td>
-                      <select class="krds-form-select small judge-result" title="심사결과 선택">
+                      <select class="krds-form-select small judge-result" title="승인여부 선택">
                         <option value="selected" selected>승인</option>
                         <option value="rejected" >미승인</option>
                       </select>
@@ -540,7 +540,7 @@
                     <td>2025-07-24</td>
                     <td>
                       <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                          <i class="svg-icon ico-edit">수정</i>
+                          <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
                   </tr>
