--- a/_common/resources/html/toggle.html
+++ b/_common/resources/html/toggle.html
@@ -50,6 +50,14 @@
             <input type="checkbox" id="switch_lg_1">
             <label for="switch_lg_1"><span class="switch-toggle"><i></i></span></label>
         </div>
+
+        <div class="toggle-wrapper member-edit">
+            <span class="toggle-label">미승인</span>
+            <div class="krds-form-toggle-switch large long-switch">
+                <input type="checkbox" id="switch_lg_2">
+                <label for="switch_lg_2"><span class="switch-toggle"><i></i></span></label>
+            </div>
+        </div>
         
     </div>
 </div>
