--- a/_common/resources/html/icon.html
+++ b/_common/resources/html/icon.html
@@ -135,6 +135,7 @@
     <i class="svg-icon ico-yelinfo-fill"></i>
     <i class="svg-icon ico-reject-fill"></i>
     <i class="svg-icon ico-return-fill"></i>
+    <i class="svg-icon ico-minusGr-fill"></i>
     <i class="svg-icon ico-warning-fill"></i>
     <i class="svg-icon ico-refile-fill"></i>
     <i class="svg-icon ico-twinck-fill"></i>
