--- a/adm/html/operation-popup-list.html
+++ b/adm/html/operation-popup-list.html
@@ -149,20 +149,21 @@
                     <td><i class="svg-icon ico-success-fill">공개</i></td>
                     <td>
                       <div class="btn-group flex-justify-center">
-                        <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                            <i class="svg-icon ico-edit">수정</i>
+                        <a href="../html/operation-popup-modify.html" class="krds-btn small line" target="_self" title="수정">
+                            <i class="svg-icon ico-edit"></i>
                         </a>
                         <a class="krds-btn small line open-modal" data-target="modal-delete-confirm" title="삭제">
-                           <i class="svg-icon ico-trash">삭제</i>
+                           <i class="svg-icon ico-trash"></i>
                         </a>
                       </div>
                     </td>
                   </tr>
+                  <!--2-->
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r2" />
+                        <label for="r2"><span class="sr-only">2행 선택</span></label>
                       </div>
                     </td>
                     <td>0000</td>
@@ -191,20 +192,21 @@
                     <td><i class="svg-icon ico-success-fill">공개</i></td>
                     <td>
                       <div class="btn-group flex-justify-center">
-                        <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                        <a href="../html/operation-popup-modify.html" class="krds-btn small line" target="_self" title="수정">
                           <i class="svg-icon ico-edit">수정</i>
                         </a>
                         <a class="krds-btn small line open-modal" data-target="modal-delete-confirm" title="삭제">
-                           <i class="svg-icon ico-trash">삭제</i>
+                           <i class="svg-icon ico-trash"></i>
                         </a>
                       </div>
                     </td>
                   </tr>
+                  <!--3-->
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r3" />
+                        <label for="r3"><span class="sr-only">3행 선택</span></label>
                       </div>
                     </td>
                     <td>0000</td>
@@ -233,20 +235,21 @@
                     <td><i class="svg-icon ico-success-fill">공개</i></td>
                     <td>
                       <div class="btn-group flex-justify-center">
-                        <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                            <i class="svg-icon ico-edit">수정</i>
+                        <a href="../html/operation-popup-modify.html" class="krds-btn small line" target="_self" title="수정">
+                            <i class="svg-icon ico-edit"></i>
                         </a>
                         <a class="krds-btn small line open-modal" data-target="modal-delete-confirm" title="삭제">
-                           <i class="svg-icon ico-trash">삭제</i>
+                           <i class="svg-icon ico-trash"></i>
                         </a>
                       </div>
                     </td>
                   </tr>
+                  <!--4-->
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r4" />
+                        <label for="r4"><span class="sr-only">4행 선택</span></label>
                       </div>
                     </td>
                     <td>0000</td>
@@ -275,20 +278,21 @@
                     <td><i class="svg-icon ico-success-fill">공개</i></td>
                     <td>
                       <div class="btn-group flex-justify-center">
-                        <a href="javascript:void(0)" download="" class="krds-btn small line" title="수정">
-                            <i class="svg-icon ico-edit">수정</i>
+                        <a href="../html/operation-popup-modify.html" class="krds-btn small line" target="_self" title="수정">
+                            <i class="svg-icon ico-edit"></i>
                         </a>
                         <a class="krds-btn small line open-modal" data-target="modal-delete-confirm" title="삭제">
-                           <i class="svg-icon ico-trash">삭제</i>
+                           <i class="svg-icon ico-trash"></i>
                         </a>
                       </div>
                     </td>
                   </tr>
+                  <!--5-->
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r5" />
+                        <label for="r5"><span class="sr-only">5행 선택</span></label>
                       </div>
                     </td>
                     <td>0000</td>
@@ -317,20 +321,21 @@
                     <td><i class="svg-icon ico-danger-fill">비공개</i></td>
                     <td>
                       <div class="btn-group flex-justify-center">
-                        <a href="javascript:void(0)" download="" class="krds-btn small line" title="수정">
-                            <i class="svg-icon ico-edit">수정</i>
+                        <a href="../html/operation-popup-modify.html" class="krds-btn small line" target="_self" title="수정">
+                            <i class="svg-icon ico-edit"></i>
                         </a>
                         <a class="krds-btn small line open-modal" data-target="modal-delete-confirm" title="삭제">
-                           <i class="svg-icon ico-trash">삭제</i>
+                           <i class="svg-icon ico-trash"></i>
                         </a>
                       </div>
                     </td>
                   </tr>
+                  <!--6-->
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r6" />
+                        <label for="r6"><span class="sr-only">6행 선택</span></label>
                       </div>
                     </td>
                     <td>0000</td>
@@ -359,11 +364,11 @@
                     <td><i class="svg-icon ico-danger-fill">비공개</i></td>
                     <td>
                       <div class="btn-group flex-justify-center">
-                        <a href="javascript:void(0)" class="krds-btn small line" title="수정">
-                            <i class="svg-icon ico-edit">수정</i>
+                        <a href="../html/operation-popup-modify.html" class="krds-btn small line" target="_self" title="수정">
+                            <i class="svg-icon ico-edit"></i>
                         </a>
                         <a class="krds-btn small line open-modal" data-target="modal-delete-confirm" title="삭제">
-                           <i class="svg-icon ico-trash">삭제</i>
+                           <i class="svg-icon ico-trash"></i>
                         </a>
                       </div>
                     </td>
