--- a/adm/html/member-teacher-edit.html
+++ b/adm/html/member-teacher-edit.html
@@ -181,7 +181,8 @@
                             <h4>급별</h4>
                         </div>
                         <div class="form-group">
-                            <input type="radio" class="square-btn hide-input" id="kindergarten" name="grade" checked>
+                            <input type="radio" class="square-btn hide-input" id="kindergarten" name="grade">
+                            <input type="radio" class="square-btn hide-input" id="elementary" name="grade">
                             <input type="radio" class="square-btn hide-input" id="middle" name="grade">
                             <input type="radio" class="square-btn hide-input" id="high" name="grade">
                             <input type="radio" class="square-btn hide-input" id="special" name="grade">
@@ -191,6 +192,11 @@
                                 <div class="grade-select">
                                     <label for="kindergarten" class="square-label first">
                                         <span>유치원</span>
+                                        <i class="radio-icon"></i>
+                                    </label>
+
+                                     <label for="elementary" class="square-label">
+                                        <span>초등</span>
                                         <i class="radio-icon"></i>
                                     </label>
 
@@ -243,7 +249,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                               
+                            ㅍㅊ     ㅏㅓ
                             </div>
                         </div>
                     </div>
