--- a/adm/html/member-auditor-edit.html
+++ b/adm/html/member-auditor-edit.html
@@ -67,9 +67,9 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts btn-ico-wrap">
-                                <input type="password" class="krds-input" placeholder="비밀번호를 입력해주세요" value="saeupcne01">
+                                <input type="password" class="krds-input" data-field="password" placeholder="비밀번호를 입력해주세요" value="saeupcne01">
                                 <button type="button" class="krds-btn medium icon">
-                                    <span class="sr-only">입력한 비밀번호 보기</span>
+                                    <span class="sr-only">보기</span>
                                     <i class="svg-icon ico-pw-visible"></i>
                                 </button>
                             </div>
@@ -81,14 +81,14 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts btn-ico-wrap">
-                                <input type="text" class="krds-input" placeholder="비밀번호를 다시 입력해주세요" value="saeupcn01">
+                                <input type="password" class="krds-input" data-field="password-confirm" placeholder="비밀번호를 다시 입력해주세요" value="1234">
                                 <button type="button" class="krds-btn medium icon">
-                                    <span class="sr-only">입력한 비밀번호 가리기</span>
-                                    <i class="svg-icon ico-pw-visible-on"></i>
+                                    <span class="sr-only">보기</span>
+                                    <i class="svg-icon ico-pw-visible"></i>
                                 </button>
                             </div>
                         </div>
-                        <div class="form-group alert-wrap">
+                        <div class="form-group alert-wrap" data-role="pw-alert">
                             <div class="alert-box msg-error">
                                 <p class="alert-tit">비밀번호가 일치하지 않습니다.</p>
                             </div>
