--- a/adm/html/member-teacher-edit.html
+++ b/adm/html/member-teacher-edit.html
@@ -157,22 +157,192 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium" value="충남중학교">
-                            </div>
-                            <div class="form-conts">
-                                <ul class="search-result-wrap">
-                                    <li>충남중학교</li>
-                                </ul>
+                                <input type="text" class="krds-input medium" data-field="org-name">
+                                <!--학교 검색 리스트-->
+                                <div class="search-result-box">
+                                    <ul class="result-list">
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">공주</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남중학교</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">논산</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남고등학교</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">당진</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남여자고등학교</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">공주</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남초등학교</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">공주</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남유치원</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">공주</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남특수고등학교</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">공주</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남중학교</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">공주</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남중학교</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">공주</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남중학교</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">공주</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남중학교</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">공주</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남중학교</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">공주</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남중학교</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                        <li>
+                                            <div class="search-result">
+                                                <div class="team">
+                                                    <span class="label">지역</span>
+                                                    <span class="value">공주</span>
+                                                </div>
+                                                <div class="name">
+                                                    <span class="label">소속명</span>
+                                                    <span class="value">충남중학교</span>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="select-btn">선택</button>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="form-box">
                         <div class="form-tt">
                             <h4>지역</h4>
+                            <span class="sub-label">소속을 선택하시면 자동으로 입력됩니다.</span>
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium disabled" value="공주" readonly>
+                                <input type="text" class="krds-input medium disabled" readonly data-field="org-region">
                             </div>
                         </div>
                     </div>
@@ -249,7 +419,25 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                            ㅍㅊ     ㅏㅓ
+                                <div class="grade-select">
+                                    <input type="radio" class="square-btn hide-input" id="establish-01" name="establish-type">
+                                    <label for="establish-01" class="square-label">
+                                        <span>공립</span>
+                                        <i class="radio-icon"></i>
+                                    </label>
+
+                                    <input type="radio" class="square-btn hide-input" id="establish-02" name="establish-type">
+                                    <label for="establish-02" class="square-label">
+                                        <span>사립</span>
+                                        <i class="radio-icon"></i>
+                                    </label>
+
+                                    <input type="radio" class="square-btn hide-input" id="establish-03" name="establish-type">
+                                    <label for="establish-03" class="square-label">
+                                        <span>국립</span>
+                                        <i class="radio-icon"></i>
+                                    </label>
+                                </div>
                             </div>
                         </div>
                     </div>
